--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Panay Tinapay Bakeshop Sales Consolidation",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/jerichosy/CSSWENG-Team-3#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^6.7.2"
+    "mongoose": "^6.7.2",
+    "nodemon": "^2.0.20"
   }
 }
