--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "mongoose": "^6.7.2"
   }
