--- a/panay-app/package.json
+++ b/panay-app/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "material-icons": "^1.13.1",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
