--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
   "homepage": "https://github.com/jerichosy/CSSWENG-Team-3#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^6.7.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
